--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,7 @@
 average_vision_distance = 100.0 # 100.0
 average_energy = 1500.0 # 1500.0
 average_division_threshold = 2300.0 # 2300.0
+skills_change_chance = 0.07 # 0.07
 
 [energy]
 energy_spent_const_for_mass = 0.0001 # 0.0001
