--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,2 @@
-[build]
-rustflags = ["-Ctarget-cpu=native", "-Zthreads=8"]
+# [nightly-x86_64-unknown-linux-gnu]
+# rustflags = ["-C", "target-cpu=native", "-Z", "threads=8"]
