--- a/config.toml
+++ b/config.toml
@@ -44,3 +44,25 @@ visionvirus_heal_energy = 500.0 # 500.0
 
 [ui]
 body_info_font_size = 17 # 17 (The font size of the info displayed over the bodies)
+
+
+
+# Properties of a body to show over it
+show_energy = false # The current energy
+show_division_threshold = true # The energy a body has to reach to be able to procreate
+show_body_type = true # The type ID the body is part of (can also be distinguished using colors)
+show_lifespan = true # How many seconds a body has left to live if it theoretically doesn't move at all
+
+show_skills = false # The skills of a body
+# DoNotCompeteWithRelatives = 0
+# AliveWhenArrived = 1
+# ProfitableWhenArrived = 2
+# PrioritizeFasterChasers = 3
+# AvoidNewViruses = 4
+# WillArriveFirst = 5
+# EatCrossesOfMyType = 6
+# AvoidInfectedCrosses = 7
+
+show_viruses = true # The viruses a body has been infected with
+# SpeedVirus = 0
+# VisionVirus = 1
