--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ min_energy = 1000.0 # 1000.0 (The minimum energy a body can live with)
 cross_lifespan = 35 # 35 (How long a cross stays on in seconds)
 
 [plants]
-plants_density = 0.00026 # 0.00026 (Number of plants per unit area)
+plants_density = 0.0002551 # 0.00026 (Number of plants per unit area)
 
 [energy]
 energy_spent_const_for_mass = 0.00005 # 0.00005 (Part of energy constantly spent on mass)
@@ -45,13 +45,11 @@ visionvirus_heal_energy = 500.0 # 500.0
 [ui]
 body_info_font_size = 17 # 17 (The font size of the info displayed over the bodies)
 
-
-
 # Properties of a body to show over it
 show_energy = false # The current energy
-show_division_threshold = true # The energy a body has to reach to be able to procreate
-show_body_type = true # The type ID the body is part of (can also be distinguished using colors)
-show_lifespan = true # How many seconds a body has left to live if it theoretically doesn't move at all
+show_division_threshold = false # The energy a body has to reach to be able to procreate
+show_body_type = false # The type ID the body is part of (can also be distinguished using colors)
+show_lifespan = false # How many seconds a body has left to live if it theoretically doesn't move at all
 
 show_skills = false # The skills of a body
 # DoNotCompeteWithRelatives = 0
@@ -63,6 +61,6 @@ show_skills = false # The skills of a body
 # EatCrossesOfMyType = 6
 # AvoidInfectedCrosses = 7
 
-show_viruses = true # The viruses a body has been infected with
+show_viruses = false # The viruses a body has been infected with
 # SpeedVirus = 0
 # VisionVirus = 1
