--- a/config.toml
+++ b/config.toml
@@ -3,14 +3,14 @@
 [body]
 # For the 1st generation
 bodies_n = 800 # 800 (How many bodies are spawned on the field)
-passive_chance = 0.3 # 0.3 (The chance a body becomes passive)
+passive_chance = 0.3 # 0.3 (The probability a body becomes passive)
 average_energy = 1500.0 # 1500.0
 average_speed = 1.5 # 1.5
 average_division_threshold = 2300.0 # 2300.0
 average_vision_distance = 100.0 # 100.0
 
 # All the time (1st generation included)
-skills_change_chance = 0.14 # 0.14 (The chance a body's child either gets or loses a skill)
+skills_change_chance = 0.14 # 0.14 (The probability a body's child either gets or loses a skill)
 deviation = 0.1 # 0.1 (The deviation a body gets its properties with)
 lifespan = 240.0 # 240.0 (Lifespan in seconds if a body theoretically doesn't move at all)
 min_energy = 1000.0 # 1000.0 (The minimum energy a body can live with)
@@ -19,8 +19,8 @@ const_for_lifespan = 0.000002 # 0.000002 (Makes the life of a body shorter if it
 
 [plants]
 plants_density = 0.00026 # 0.00026 (The number of plants per unit area for the initial spawning)
-plant_spawn_chance = 0.0000001 # 0.0000001 (The chance for a plant to be spawned per unit area)
-plant_die_chance = 0.0004 # 0.0004 (The chance for a plant to die)
+plant_spawn_chance = 0.0000001 # 0.0000001 (The probability for a plant to be spawned per unit area)
+plant_die_chance = 0.0004 # 0.0004 (The probability for a plant to die)
 
 [energy]
 energy_spent_const_for_mass = 0.00005 # 0.00005 (Part of energy constantly spent on mass)
@@ -29,7 +29,7 @@ energy_spent_const_for_vision_distance = 0.00005 # 0.00005 (Part of energy const
 energy_spent_const_for_movement = 0.0004 # 0.0004 (Part of energy constantly spent on movement depending on the speed)
 
 [viruses]
-# first_generation_infection_chance: the chance the 1st generation gets infected with the virus
+# first_generation_infection_chance: the probability the 1st generation gets infected with the virus
 # speed_decrease: part of speed the virus steals
 # energy_spent_for_healing: part of energy spent on healing from the virus
 # heal_energy: how much energy needs to be spent to get rid of the virus
