--- a/config.toml
+++ b/config.toml
@@ -45,7 +45,8 @@ visionvirus_energy_spent_for_healing = 0.02 # 0.02
 visionvirus_heal_energy = 500.0 # 500.0
 
 [condition]
-condition_chance = 0.0003 # 0.0003
+condition_chance = 0.0003 # 0.0003 (For one tick)
+condition_lifetime = [60, 90] # [60, 90] (Range in seconds)
 
 [ui]
 body_info_font_size = 17 # 17 (The font size of the info displayed over the bodies)
